--- a/pinyougou-shop-web/src/main/webapp/admin/goods_edit.html
+++ b/pinyougou-shop-web/src/main/webapp/admin/goods_edit.html
@@ -48,7 +48,7 @@
 
 <body class="hold-transition skin-red sidebar-mini" ng-app="pinyougou"
 	ng-controller="goodsController"
-	ng-init="selectItemCat1List();selectItemCat2List()">
+	ng-init="selectItemCat1List();selectItemCat2List();findOne()">
 	<!-- 正文区域 -->
 	<section class="content">
 		<div class="box-body">
@@ -206,7 +206,7 @@
 								<div ng-repeat="pojo in specList">
 									<div class="col-md-2 title">{{pojo.text}}</div>
 									<div class="col-md-10 data">
-										<span ng-repeat="option in pojo.options"> <input type="checkbox" ng-click="updateSpecAttribute($event,pojo.text,option.optionName);createItemList()">{{option.optionName}}
+										<span ng-repeat="option in pojo.options"> <input type="checkbox" ng-click="updateSpecAttribute($event,pojo.text,option.optionName);createItemList()" ng-checked="checkAttributeValue(pojo.text,option.optionName)">{{option.optionName}}
 										</span>
 									</div>
 								</div>
@@ -241,10 +241,10 @@
 			</div>
 		</div>
 		<div class="btn-toolbar list-toolbar">
-			<button class="btn btn-primary" ng-click="add()">
+			<button class="btn btn-primary" ng-click="save()">
 				<i class="fa fa-save"></i>保存
 			</button>
-			<button class="btn btn-default">返回列表</button>
+			<a class="btn btn-default" href="goods.html">返回列表</a>
 		</div>
 	</section>
 	<!-- 上传窗口 -->
